force-app/main/default/objects/Product2/fields/Iterations_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>Iterations_Per_Year__c</fullName>
    <defaultValue>1</defaultValue>
    <label>[Delete] Iterations Per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>