force-app/main/default/objects/Product2/fields/Maintainable__c.field-meta.xml
<CustomField>
    <fullName>Maintainable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[Delete] Maintainable</label>
    <type>Checkbox</type>
</CustomField>