force-app/main/default/objects/Product2/fields/Maintenance_Included__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[Delete] Maintenance Included</label>
    <type>Checkbox</type>
</CustomField>