force-app/main/default/objects/Product2/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <label>[Delete] Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BT</fullName>
            </value>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>Cisco Meraki</fullName>
            </value>
            <value>
                <fullName>Comm21</fullName>
            </value>
            <value>
                <fullName>Juniper</fullName>
            </value>
            <value>
                <fullName>M12 Solutions</fullName>
            </value>
            <value>
                <fullName>Mitel</fullName>
            </value>
            <value>
                <fullName>Plantronics</fullName>
            </value>
            <value>
                <fullName>Splicecom</fullName>
            </value>
            <value>
                <fullName>Yealink</fullName>
            </value>
            <value>
                <fullName>Misc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>