force-app/main/default/objects/Product2/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <label>[Delete] Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Colt</fullName>
            </value>
            <value>
                <fullName>CityFibre</fullName>
            </value>
            <value>
                <fullName>Entanet</fullName>
            </value>
            <value>
                <fullName>Glide</fullName>
            </value>
            <value>
                <fullName>Openreach</fullName>
            </value>
            <value>
                <fullName>SSE</fullName>
            </value>
            <value>
                <fullName>TalkTalk Business</fullName>
            </value>
            <value>
                <fullName>Virtual1</fullName>
            </value>
            <value>
                <fullName>Zen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>