force-app/main/default/objects/Product2/recordTypes/Giganet.recordType-meta.xml
<RecordType>
    <fullName>Giganet</fullName>
    <active>true</active>
    <label>Giganet</label>
</RecordType>