force-app/main/default/objects/Product2/listViews/Giganet_Products.listView-meta.xml
<ListView>
    <fullName>Giganet_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>contains</operation>
        <value>Giganet Hardware,Giganet Misc,Giganet Rental Monthly,Giganet Rental Quarterly,Giganet Set up</value>
    </filters>
    <label>Giganet Products</label>
</ListView>